--- a/manager/asset/index.html
+++ b/manager/asset/index.html
@@ -4,5 +4,21 @@
 		<link rel="import" href="/bower_components/polymer/polymer.html">
 	</head>
 	</body>
+
+
+	<div>
+
+	    <h2>ログイン</h2>
+	    <form method="POST" action="./login">
+		Username
+		<input name="username" type="text" placeholder="Username" required> 
+		Password
+		<input name="password" type="password" placeholder="Password" required>
+		<br>
+		<button type="submit">ログイン</button>
+	    </form>
+        </div>
+
+
 	<body>
 </html>
