--- a/manager/asset/index.html
+++ b/manager/asset/index.html
@@ -9,6 +9,7 @@
 	<div>
 
 	    <h2>ログイン</h2>
+	    {{ message }}
 	    <form method="POST" action="./login">
 		Username
 		<input name="username" type="text" placeholder="Username" required> 
